src/objects/Hazard__c.object
<CustomObject>
    <fields>
        <fullName>Cause__c</fullName>
        <label>Cause</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Harm__c</fullName>
        <label>Harm</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hazardous_Situation__c</fullName>
        <label>Hazardous Situation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PA__c</fullName>
        <formula>if(TEXT(Prob_of_harzard__c)=&quot;Unlikely&quot;, 0.0001,if(TEXT(Prob_of_harzard__c)=&quot;Possible&quot;,0.001,if(TEXT(Prob_of_harzard__c)=&quot;Occasional&quot;, 0.01,0.1)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PB__c</fullName>
        <formula>if(TEXT(Probability_of_Harm__c)=&quot;Rare&quot;,0.0009,if(TEXT(Probability_of_Harm__c)=&quot;Unlikely&quot;,0.001,if(TEXT(Probability_of_Harm__c)=&quot;Possible&quot;,0.009,if(TEXT(Probability_of_Harm__c)=&quot;Likely&quot;, 0.01,0.09))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PB</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prob_of_harzard__c</fullName>
        <label>Probability of Hazardous Situation</label>
        <picklist>
            <picklistValues>
                <fullName>Unlikely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Possible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Occasional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remote</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Probability_of_Harm__c</fullName>
        <label>Probability of Harm</label>
        <picklist>
            <picklistValues>
                <fullName>Almost certain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Likely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Possible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlikely</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rare</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sequence_of_events_leading_to_the_hazard__c</fullName>
        <label>Sequence of Events Leading to the Hazard</label>
        <length>130768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Severity_of_Harm_S__c</fullName>
        <label>Severity of Harm (S)</label>
        <picklist>
            <picklistValues>
                <fullName>S1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unique_ID__c</fullName>
        <externalId>true</externalId>
        <label>Unique ID</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>Hazard</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Hazard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hazard</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>